[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["asynchronous", "gui"]
description = "Asynchronous, GTK+-based, GUI library, inspired by Elm, written in Rust"
homepage = "https://relm.antoyo.xyz/"
documentation = "https://docs.rs/relm/"
license = "MIT"
name = "relm"
readme = "README.adoc"
repository = "https://github.com/antoyo/relm"
version = "0.24.1"
edition = "2018"

[dependencies]
cairo-rs = "^0"
fragile = "2.0"
glib = "^0"
glib-sys = "^0"
gobject-sys = "^0"
gtk = "^0"
libc = "^0"
log = "^0"

[features]
hidpi = []
